Add api GET /pools
